// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBoardWithOpenedSquares doesn't open flagged squares 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "status": "unopened",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "flag",
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
]
`;

exports[`getBoardWithOpenedSquares only opens one if it has adjacentBombs number 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "status": "unopened",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "unopened",
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "unopened",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "unopened",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "unopened",
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "unopened",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "unopened",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "unopened",
    },
  ],
]
`;

exports[`getBoardWithOpenedSquares opens all adjacent empty and adjacent with adjacentBombs number 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "status": "unopened",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
]
`;

exports[`setAllSquaresToOpen opens all squares and sets flagged to false 1`] = `
[
  [
    {
      "adjacentBombs": 0,
      "isBomb": true,
      "status": "open",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
  [
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 1,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
  [
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
    {
      "adjacentBombs": 0,
      "isBomb": false,
      "status": "open",
    },
  ],
]
`;
